data/derived/comb/progs/unify/prog4583.ml.out
Characters 47-48:
  (n,boo) -> f b;;
             ^
Error: This expression has type 'a * 'b
       This is not a function; it cannot be applied.
